Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.1
-
-
e11c1eda4f (qt/qtdeclarative/dev)
Description
Before PySide 6.4.1, using `qmllint --json` outputs the linting results to the standard output in JSON format.This is a breaking change that cannot be found in any development notes.
IMHO, the old behavior is more flexible than the latest one as we can redirect the output to a file if we want without requiring a file path to store the message. The old behavior also provides an easier way for other tools (e.g. CI report) or extensions to integrate the linter.
I believe this https://github.com/qt/qtdeclarative/commit/5c04d174282a9a36ce12b26e1807d3d5051a7f33 is the change to break the interface. Maybe making the <file> argument optional and sending the results to the standard output by default if no file is given could solve this problem.
Cf "CMake: Add _qmllint_json target" qtdeclarative/5c04d174282a9a36ce12b26e1807d3d5051a7f33 https://codereview.qt-project.org/c/qt/qtdeclarative/+/404894 for QTBUG-95157 .
Attachments
Issue Links
- resulted from
-
QTBUG-95157 Provide ability to run qmllint with --json output
-
- Closed
-
For Gerrit Dashboard: QTBUG-108913 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
445597,2 | qmllint: document new behavior of --json | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
445610,2 | qmllint: document new behavior of --json | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |