qmllint: document new behavior of --json

Amends 5c04d174282a9a36ce12b26e1807d3d5051a7f33.
The behavior of qmllint changed in the above-mentioned commit, as it
started expecting a file argument for the --json option. Before, it was
not expecting any and always writing to stdout.

Document the new behavior in the docs and in the --help command,
especially the part about using '-' to restore the old behavior.

Fixes: QTBUG-108913
Change-Id: I3a69a794a5362a575437d3d832d6e038c7a0755a
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit e11c1eda4fbd1910f9089dae60e4d22bfe3bb595)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>